--- a/EnglishHelper/EnglishHelper.Client/KeyWindow.xaml
+++ b/EnglishHelper/EnglishHelper.Client/KeyWindow.xaml
@@ -5,17 +5,22 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EnglishHelper.Client"
         mc:Ignorable="d"
-        Title="API key validation" Height="115.523" Width="675.224" FontFamily="Constantia" ResizeMode="NoResize" BorderThickness="1" BorderBrush="White">
+        Title="API key validation" Height="132.523" Width="675.224" FontFamily="Constantia" ResizeMode="NoResize" BorderThickness="1" BorderBrush="White">
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
             <GradientStop Color="Black" Offset="0"/>
             <GradientStop Color="#FF31FFF5" Offset="1"/>
         </LinearGradientBrush>
     </Window.Background>
-    <Grid Margin="0,0,0,10">
-        <Button x:Name="applyButton" Content="Apply" HorizontalAlignment="Left" Margin="567,35,0,0" VerticalAlignment="Top" Width="75" BorderBrush="{x:Null}" Foreground="#FFF3F3F3" Height="23" Background="{x:Null}"/>
+    <Grid Margin="0,0,0,1">
+        <Button x:Name="applyButton" Content="Apply" HorizontalAlignment="Left" Margin="567,35,0,0" VerticalAlignment="Top" Width="75" BorderBrush="White" Foreground="#FFF3F3F3" Height="23" Background="{x:Null}" FontSize="13" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
         <TextBox x:Name="keyTextBox" HorizontalAlignment="Left" Height="23" Margin="15,35,0,0" TextWrapping="Wrap" Text="&#xD;&#xA;" VerticalAlignment="Top" Width="527" FontFamily="Comic Sans MS" FontSize="10"/>
-        <Label x:Name="label" Content="Please insert your API key here:" HorizontalAlignment="Left" Margin="15,5,0,0" VerticalAlignment="Top" Foreground="#FFF3F3F3"/>
-
+        <Label x:Name="label" Content="Please insert your API key here:" HorizontalAlignment="Left" Margin="10,5,0,0" VerticalAlignment="Top" Foreground="#FFF3F3F3" FontSize="13"/>
+        <Label x:Name="label1" HorizontalAlignment="Left" Margin="11,63,0,0" VerticalAlignment="Top">
+            <Hyperlink NavigateUri="https://tech.yandex.com/translate/"
+                       Hyperlink.RequestNavigate="Hyperlink_RequestNavigate" Foreground="#FF1108CF" FontSize="13">
+                <TextBlock Text="How can I get this key?"></TextBlock>
+            </Hyperlink>
+        </Label>
     </Grid>
 </Window>
