--- a/EnglishHelper/EnglishHelper.Client/KeyWindow.xaml
+++ b/EnglishHelper/EnglishHelper.Client/KeyWindow.xaml
@@ -16,11 +16,11 @@
         <Button x:Name="applyButton" Content="Apply" HorizontalAlignment="Left" Margin="567,35,0,0" VerticalAlignment="Top" Width="75" BorderBrush="White" Foreground="#FFF3F3F3" Height="23" Background="{x:Null}" FontSize="13" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
         <TextBox x:Name="keyTextBox" HorizontalAlignment="Left" Height="23" Margin="15,35,0,0" TextWrapping="Wrap" Text="&#xD;&#xA;" VerticalAlignment="Top" Width="527" FontFamily="Comic Sans MS" FontSize="10"/>
         <Label x:Name="label" Content="Please insert your API key here:" HorizontalAlignment="Left" Margin="10,5,0,0" VerticalAlignment="Top" Foreground="#FFF3F3F3" FontSize="13"/>
-        <Label x:Name="label1" HorizontalAlignment="Left" Margin="11,63,0,0" VerticalAlignment="Top">
-            <Hyperlink NavigateUri="https://tech.yandex.com/translate/"
-                       Hyperlink.RequestNavigate="Hyperlink_RequestNavigate" Foreground="#FF1108CF" FontSize="13">
-                <TextBlock Text="How can I get this key?"></TextBlock>
-            </Hyperlink>
-        </Label>
+        <StackPanel HorizontalAlignment="Left" Height="21" Margin="15,71,0,0" VerticalAlignment="Top" Width="414">
+            <TextBlock Height="16" Margin="0,0,-196,0" >
+                       Don't have this key? Please <Hyperlink x:Name="getKeyHyperlink" NavigateUri="">click here</Hyperlink> to get it free.
+            </TextBlock>
+        </StackPanel>
+
     </Grid>
 </Window>
