Fill empty values was added; Data binding was added

--- a/EnglishHelper/EnglishHelper.Client/DictionaryWindow.xaml
+++ b/EnglishHelper/EnglishHelper.Client/DictionaryWindow.xaml
@@ -5,12 +5,19 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EnglishHelper.Client"
         mc:Ignorable="d"
-        Title="Dictionary" Height="509.2" Width="402.4" FontFamily="Constantia" FontSize="13" MinHeight="509" MinWidth="402">
+        Title="Dictionary" Height="506.2" Width="451.4" FontFamily="Constantia" FontSize="13" MinHeight="506" MinWidth="451">
     <Grid>
-        <DataGrid x:Name="wordGrid" Margin="23,21,19,69" FontSize="12" FontFamily="Comic Sans MS" RowHeight="20" RowHeaderWidth="0"/>
-        <Button x:Name="addWordButton" Content="Add new word" HorizontalAlignment="Left" Margin="23,0,0,14" Width="100" RenderTransformOrigin="0.389,0.018" FontFamily="Constantia" FontSize="13" Height="35" VerticalAlignment="Bottom" Background="{x:Null}"/>
-        <Button x:Name="deleteWordButton" Content="Delete word" HorizontalAlignment="Left" Margin="148,0,0,14" VerticalAlignment="Bottom" Width="100" FontFamily="Constantia" FontSize="13" Height="35" RenderTransformOrigin="0.827,0.603" Background="{x:Null}"/>
-        <Button x:Name="saveDictionaryButton" Content="Save" HorizontalAlignment="Left" Margin="274,0,0,14" VerticalAlignment="Bottom" Width="101" RenderTransformOrigin="0.784,0.773" Height="35" Background="{x:Null}"/>
+        <DataGrid x:Name="wordGrid" Margin="20,37,22,66" FontSize="12" FontFamily="Comic Sans MS" RowHeight="20" RowHeaderWidth="0" AutoGenerateColumns="False" ItemsSource="{Binding}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Binding="{Binding Word}" Header="Word"/>
+                <DataGridTextColumn Binding="{Binding Translation}" Header="Translation"/>
+                <DataGridTextColumn Binding="{Binding LastChangeDate}" Header="Last change date"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        <Button x:Name="addWordButton" Content="Add new word" HorizontalAlignment="Left" Margin="20,0,0,15" Width="100" RenderTransformOrigin="0.389,0.018" FontFamily="Constantia" FontSize="13" Height="35" VerticalAlignment="Bottom" Background="{x:Null}"/>
+        <Button x:Name="deleteWordButton" Content="Delete word" HorizontalAlignment="Left" Margin="172,0,0,15" VerticalAlignment="Bottom" Width="100" FontFamily="Constantia" FontSize="13" Height="35" RenderTransformOrigin="0.827,0.603" Background="{x:Null}"/>
+        <Button x:Name="saveDictionaryButton" Content="Save" HorizontalAlignment="Left" Margin="320,0,0,15" VerticalAlignment="Bottom" Width="101" RenderTransformOrigin="0.784,0.773" Height="35" Background="{x:Null}"/>
+        <Label x:Name="label" Content="Your dictionary:" HorizontalAlignment="Left" Margin="16,7,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
