--- a/EnglishHelper/EnglishHelper.Client/DictionaryWindow.xaml
+++ b/EnglishHelper/EnglishHelper.Client/DictionaryWindow.xaml
@@ -9,9 +9,9 @@
     <Grid>
         <DataGrid x:Name="wordGrid" Margin="20,37,22,66" FontSize="12" FontFamily="Comic Sans MS" RowHeight="20" RowHeaderWidth="0" AutoGenerateColumns="False" ItemsSource="{Binding}" RowEditEnding="wordGrid_RowEditEnding">
             <DataGrid.Columns>
-                <DataGridTextColumn Binding="{Binding Word, UpdateSourceTrigger=LostFocus}" Header="Word"/>
-                <DataGridTextColumn Binding="{Binding Translation, UpdateSourceTrigger=LostFocus}" Header="Translation"/>
-                <DataGridTextColumn Binding="{Binding LastChangeDate, UpdateSourceTrigger=LostFocus}" Header="Last change date"/>
+                <DataGridTextColumn Binding="{Binding Word, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Header="Word"/>
+                <DataGridTextColumn Binding="{Binding Translation, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Header="Translation"/>
+                <DataGridTextColumn Binding="{Binding LastChangeDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Header="Last change date"/>
             </DataGrid.Columns>
         </DataGrid>
         <Button x:Name="addWordButton" Content="Add new word" HorizontalAlignment="Left" Margin="20,0,0,15" Width="124" RenderTransformOrigin="0.389,0.018" FontFamily="Constantia" FontSize="13" Height="35" VerticalAlignment="Bottom" Background="{x:Null}"/>
