Add word button hide

--- a/EnglishHelper/EnglishHelper.Client/DictionaryWindow.xaml
+++ b/EnglishHelper/EnglishHelper.Client/DictionaryWindow.xaml
@@ -14,7 +14,7 @@
                 <DataGridTextColumn Binding="{Binding LastChangeDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Header="Last change date"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Button x:Name="addWordButton" Content="Add new word" HorizontalAlignment="Left" Margin="20,0,0,15" Width="124" RenderTransformOrigin="0.389,0.018" FontFamily="Constantia" FontSize="13" Height="35" VerticalAlignment="Bottom" Background="{x:Null}"/>
+        <Button x:Name="addWordButton" Content="Add new word" HorizontalAlignment="Left" Margin="20,0,0,15" Width="124" RenderTransformOrigin="0.389,0.018" FontFamily="Constantia" FontSize="13" Height="35" VerticalAlignment="Bottom" Background="{x:Null}" Visibility="Hidden"/>
         <Button x:Name="deleteWordButton" Content="Delete word" HorizontalAlignment="Left" Margin="155,0,0,15" VerticalAlignment="Bottom" Width="124" FontFamily="Constantia" FontSize="13" Height="35" RenderTransformOrigin="0.827,0.603" Background="{x:Null}"/>
         <Button x:Name="saveDictionaryButton" Content="Save" HorizontalAlignment="Left" Margin="289,0,0,15" VerticalAlignment="Bottom" Width="124" RenderTransformOrigin="0.784,0.773" Height="35" Background="{x:Null}"/>
         <Label x:Name="label" Content="Your dictionary:" HorizontalAlignment="Left" Margin="16,7,0,0" VerticalAlignment="Top"/>
