New design was implemented

--- a/EnglishHelper/EnglishHelper.Client/App.xaml
+++ b/EnglishHelper/EnglishHelper.Client/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:EnglishHelper.Client"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Styles/VS2012WindowStyle.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
