--- a/EnglishHelper/EnglishHelper.Client/App.xaml
+++ b/EnglishHelper/EnglishHelper.Client/App.xaml
@@ -6,7 +6,8 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Styles/VS2012WindowStyle.xaml" />
+                <ResourceDictionary Source="Styles/MainWindowStyle.xaml" />
+                <ResourceDictionary Source="Styles/KeyWindowStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
