--- a/EnglishHelper/EnglishHelper.Client/DictionaryWindow.xaml
+++ b/EnglishHelper/EnglishHelper.Client/DictionaryWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EnglishHelper.Client"
         mc:Ignorable="d"
-        Title="Dictionary" Height="506.2" Width="451.4" FontFamily="Constantia" FontSize="13" MinHeight="506" MinWidth="451" WindowStyle="None" Icon="Images/ShallDen.png" Style="{DynamicResource VS2012WindowStyle}" AllowsTransparency="True">
+        Title="Dictionary" Height="506.2" Width="451.4" FontFamily="Constantia" FontSize="13" MinHeight="506" MinWidth="451" WindowStyle="None" Icon="Images/ShallDen.png" Style="{DynamicResource MainWindowStyle}" AllowsTransparency="True">
     <Grid>
         <DataGrid x:Name="wordGrid" Margin="20,37,22,66" FontSize="12" FontFamily="Comic Sans MS" RowHeight="20" RowHeaderWidth="0" AutoGenerateColumns="False" ItemsSource="{Binding}">
             <DataGrid.Columns>
