--- a/EnglishHelper/EnglishHelper.Client/Styles/MainWindowStyle.xaml
+++ b/EnglishHelper/EnglishHelper.Client/Styles/MainWindowStyle.xaml
@@ -1,5 +1,5 @@
 <ResourceDictionary 
-    x:Class="EnglishHelper.Client.VS2012WindowStyle"
+    x:Class="EnglishHelper.Client.MainWindowStyle"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
@@ -52,7 +52,7 @@
         </Setter>
     </Style>
 
-    <Style x:Key="VS2012WindowStyle" TargetType="{x:Type Window}">
+    <Style x:Key="MainWindowStyle" TargetType="{x:Type Window}">
         <Setter Property="AllowsTransparency" Value="true" />
         <Setter Property="WindowStyle" Value="None" />
         <Setter Property="Background" Value="Transparent" />
