--- a/EnglishHelper/EnglishHelper.Client/KeyWindow.xaml
+++ b/EnglishHelper/EnglishHelper.Client/KeyWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="API key validation" Height="143" Width="675" FontFamily="Constantia" ResizeMode="NoResize" BorderThickness="1" BorderBrush="White" WindowStyle="None" Icon="Images/ShallDen.png" Style="{DynamicResource KeyWindowStyle}" AllowsTransparency="True" MinWidth="675" MinHeight="143" MaxHeight="143" MaxWidth="675" Background="{x:Null}" >
     <Grid Margin="0,0,0,1">
-        <Button x:Name="applyButton" Content="Apply" HorizontalAlignment="Left" Margin="566,35,0,0" VerticalAlignment="Top" Width="75" Height="23" Background="{x:Null}" FontSize="13" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" ToolTip="Clcik to apply entered API key" TabIndex="2" BorderBrush="#FF8AA0E8"/>
+        <Button x:Name="applyButton" Content="Apply" HorizontalAlignment="Left" Margin="566,35,0,0" VerticalAlignment="Top" Width="75" Height="23" Background="{x:Null}" FontSize="13" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" ToolTip="Clcik to apply entered API key" TabIndex="2" BorderBrush="#FF8AA0E8" Cursor="Hand"/>
         <TextBox x:Name="keyTextBox" HorizontalAlignment="Left" Height="23" Margin="15,35,0,0" TextWrapping="Wrap" Text="Please input your key here..." VerticalAlignment="Top" Width="527" FontFamily="Comic Sans MS" FontSize="10" TabIndex="1" Grid.ColumnSpan="2" BorderBrush="#FF8AA0E8">
             <TextBox.Foreground>
                 <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.GrayTextColorKey}}"/>
