Opening window fade in was added

--- a/EnglishHelper/EnglishHelper.Client/DictionaryWindow.xaml
+++ b/EnglishHelper/EnglishHelper.Client/DictionaryWindow.xaml
@@ -22,4 +22,14 @@
             <Label x:Name="wordCountLabel" Content="{Binding Count, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="34" HorizontalAlignment="Right" VerticalContentAlignment="Bottom" FontFamily="Comic Sans MS" Height="30" FontSize="14" Margin="0,-5,-5,-2"/>
         </Grid>
     </Grid>
+
+    <Window.Triggers>
+        <EventTrigger RoutedEvent="Window.Loaded">
+            <BeginStoryboard>
+                <Storyboard>
+                    <DoubleAnimation Duration="00:00:01" Storyboard.TargetProperty="Opacity" From="0" To="1" />
+                </Storyboard>
+            </BeginStoryboard>
+        </EventTrigger>
+    </Window.Triggers>
 </Window>
