--- a/EnglishHelper/EnglishHelper.Client/Styles/KeyWindowStyle.xaml
+++ b/EnglishHelper/EnglishHelper.Client/Styles/KeyWindowStyle.xaml
@@ -1,5 +1,5 @@
 <ResourceDictionary 
-    x:Class="EnglishHelper.Client.MainWindowStyle"
+    x:Class="EnglishHelper.Client.KeyWindowStyle"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
@@ -10,14 +10,14 @@
 
     <LinearGradientBrush x:Key="ShallDenBrushTitle" EndPoint="0.5,1" StartPoint="0.5,0">
         <GradientStop Color="#FFFFDCB6" Offset="0"/>
-        <GradientStop Color="#FFFFC488" Offset="0.3"/>
-        <GradientStop Color="#FFFFA510" Offset="1"/>
+        <GradientStop Color="#FFFFC488" Offset="0.2"/>
+        <GradientStop Color="#FFFFA500" Offset="0.8"/>
     </LinearGradientBrush>
 
 
     <LinearGradientBrush x:Key="ShallDenBrush" EndPoint="0.5,1" StartPoint="0.5,0">
-        <GradientStop Color="#FFFFA510" Offset="0.15"/>
-        <GradientStop Color="White" Offset="0.5"/>
+        <GradientStop Color="#FFFFA500" Offset="0.3"/>
+        <GradientStop Color="White" Offset="0.6"/>
     </LinearGradientBrush>
 
     <SolidColorBrush x:Key="VS2012WindowBorderBrush" Color="#007ACC" />
@@ -53,7 +53,7 @@
         </Setter>
     </Style>
 
-    <Style x:Key="MainWindowStyle" TargetType="{x:Type Window}">
+    <Style x:Key="KeyWindowStyle" TargetType="{x:Type Window}">
         <Setter Property="AllowsTransparency" Value="true" />
         <Setter Property="WindowStyle" Value="None" />
         <Setter Property="Background" Value="Transparent" />
@@ -130,55 +130,6 @@
                                             Text="{Binding Path=Title, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}" FontWeight="Bold" TextOptions.TextFormattingMode="Display"
                                             />
                                         <Button
-                                            x:Name="MinButton" 
-                                            Grid.Column="2"
-                                            VerticalAlignment="Top"
-                                            Width="34"
-                                            Height="26"
-                                            Style="{StaticResource VS2012WindowStyleTitleBarButton}"
-                                            Click="MinButtonClick"
-                                            >
-                                            <Grid MaxHeight="9" MaxWidth="9">
-                                                <Path
-                                                    Stroke="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}"
-                                                    StrokeThickness="1"
-                                                    Stretch="None"
-                                                    RenderOptions.EdgeMode="Aliased"
-                                                    Data="M0,8 H8 M0,7 H8 M0,6 H8"
-                                                    />
-                                            </Grid>
-                                            <Button.ToolTip>
-                                                <ToolTip>
-                                                    Minimize
-                                                </ToolTip>
-                                            </Button.ToolTip>
-                                        </Button>
-                                        <Button
-                                            Grid.Column="3"
-                                            x:Name="MaxButton" 
-                                            VerticalAlignment="Top"
-                                            Width="34"
-                                            Height="26"
-                                            Style="{StaticResource VS2012WindowStyleTitleBarButton}"
-                                            Click="MaxButtonClick"
-                                            >
-                                            <Grid MaxHeight="9" MaxWidth="9">
-                                                <Path
-                                                    x:Name="PART_MaxButton_Path"
-                                                    Stroke="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}"
-                                                    StrokeThickness="1"
-                                                    Stretch="None"
-                                                    RenderOptions.EdgeMode="Aliased"
-                                                    Data="M0,0 H8 V8 H0 V0 M0,1 H8 M0,2 H8"
-                                                    />
-                                            </Grid>
-                                            <Button.ToolTip>
-                                                <ToolTip>
-                                                    Maximize
-                                                </ToolTip>
-                                            </Button.ToolTip>
-                                        </Button>
-                                        <Button
                                             Grid.Column="4"
                                             x:Name="CloseButton" 
                                             VerticalAlignment="Top"
@@ -206,49 +157,8 @@
                                 <ContentPresenter />
                             </DockPanel>
                         </Border>
-                        <Line
-                            MouseDown="OnSizeNorth"
-                            x:Name="lnSizeNorth"
-                            Stroke="Transparent"   
-                            Cursor="SizeNS"
-                            X1="1" X2="{TemplateBinding ActualWidth}" Y1="1" Y2="1"
-                            StrokeThickness="3"
-                            />
-                        <Line
-                            MouseDown="OnSizeSouth"
-                            x:Name="lnSizeSouth"
-                            Stroke="Transparent"
-                            VerticalAlignment="Bottom" 
-                            Cursor="SizeNS"
-                            X1="1" X2="{TemplateBinding ActualWidth}" Y1="{TemplateBinding ActualHeight}" Y2="{TemplateBinding ActualHeight}"
-                            StrokeThickness="3"
-                            />
-                        <Line
-                            MouseDown="OnSizeWest"
-                            x:Name="lnSizeWest"
-                            Stroke="Transparent"
-                            Cursor="SizeWE"
-                            X1="1" X2="1" Y1="1" Y2="{TemplateBinding ActualHeight}"
-                            StrokeThickness="3"
-                            />
-                        <Line
-                            MouseDown="OnSizeEast"
-                            x:Name="lnSizeEast"
-                            Stroke="Transparent"
-                            HorizontalAlignment="Right" 
-                            Cursor="SizeWE"
-                            X1="{TemplateBinding ActualWidth}" X2="{TemplateBinding ActualWidth}" Y1="1" Y2="{TemplateBinding ActualHeight}"
-                            StrokeThickness="3"
-                            />
-                        <Rectangle MouseDown="OnSizeNorthWest" x:Name="rectSizeNorthWest" Cursor="SizeNWSE" Fill="Transparent" Width="5" Height="5" VerticalAlignment="Top" HorizontalAlignment="Left" />
-                        <Rectangle MouseDown="OnSizeNorthEast" x:Name="rectSizeNorthEast" Cursor="SizeNESW" Fill="Transparent" Width="5" Height="5" VerticalAlignment="Top" HorizontalAlignment="Right" />
-                        <Rectangle MouseDown="OnSizeSouthWest" x:Name="rectSizeSouthWest" Cursor="SizeNESW" Fill="Transparent" Width="5" Height="5" VerticalAlignment="Bottom" HorizontalAlignment="Left" />
-                        <Rectangle MouseDown="OnSizeSouthEast" x:Name="rectSizeSouthEast" Cursor="SizeNWSE" Fill="Transparent" Width="5" Height="5" VerticalAlignment="Bottom" HorizontalAlignment="Right" />
                     </Grid>
                     <ControlTemplate.Triggers>
-                        <Trigger Property="WindowState" Value="Maximized">
-                            <Setter TargetName="PART_MaxButton_Path" Property="Data" Value="M0,3 H5 V8 H0 V3 M0,4 H5 M3,0 H8 V5 H7 M3,1 H8"/>
-                        </Trigger>
                         <Trigger Property="IsActive" Value="False">
                             <Setter TargetName="PART_Border" Property="BorderBrush" Value="{StaticResource VS2012WindowBorderBrushInactive}"/>
                         </Trigger>
